@@ -82,7 +82,7 @@
         <org.slf4j.version>1.7.25</org.slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <axiom.version>1.2.8</axiom.version>
-        <surefire.version>2.18.1</surefire.version>
+        <surefire.version>3.0.0-M1</surefire.version>
         <junit.version>4.12</junit.version>
         <curator.version>2.8.0</curator.version>
         <!--remove xmlbeans version -->
@@ -118,9 +118,11 @@
         <commons.io.version>2.4</commons.io.version>
         <google.guava.version>20.0</google.guava.version>
         <jacoco.version>0.8.1</jacoco.version>
-        <openjpa.version>2.4.3</openjpa.version>
+        <openjpa.version>3.1.0</openjpa.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
         <jaxb.version>2.4.0-b180830.0359</jaxb.version>
+        <jmockit.version>1.44</jmockit.version>
+        <commons.lang.version>2.6</commons.lang.version>
     </properties>
 
     <developers>
@@ -669,9 +671,22 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.6.1</version>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <source>11</source>
+                            <target>11</target>
+                        <!--</configuration>-->
+                        <!--&lt;!&ndash;<version>3.8.0</version>&ndash;&gt;-->
+                        <!--<configuration>-->
+
+                            <!--<compilerArgs>-->
+                                <!--<arg>&#45;&#45;add-exports=java.base/sun.security=ALL-UNNAMED</arg>-->
+                            <!--</compilerArgs>-->
+                            <!--<release>11</release>-->
+                            <fork>true</fork>
                         </configuration>
+
+                        <!-- without forking compilation happens in the
+                            same process, so no arguments are applied -->
+
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -685,6 +700,11 @@
                                 tests -->
                             <!-- Integration tests are run using the fail-safe plugin in the module
                                 pom -->
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+
+                            <reuseForks>false</reuseForks>
+
                             <excludes>
                                 <exclude>**/IT.java</exclude>
                                 <exclude>**/*TestWithMyProxyAuth.java</exclude>
@@ -786,10 +806,13 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.1</version>
+                        <version>3.8.0</version>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <release>11</release>
+                            <!--<compilerArgs>-->
+                                <!--<arg>&#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED</arg>-->
+                            <!--</compilerArgs>-->
+                            <!--<fork>true</fork>-->
                         </configuration>
                     </plugin>
                     <plugin>
